# anomaly_detection

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
anomaly_inspection/: Dockerfile  docker-compose.yml
anomaly_inspection/app/api/: auth.py
anomaly_inspection/app/core/: config.py
anomaly_inspection/app/db/: models.py  seed.py
anomaly_inspection/app/services/: storage.py
anomaly_inspection/tests/: test_auth.py
anomaly_inspection/ui/: admin_ui.py  app_ui.py  auth_ui.py
app/: main.py
app/api/: admin.py  auth.py  deps.py  user.py
app/core/: config.py  security.py
app/db/: crud.py  models.py  seed.py
app/db/migrations/: alembic.ini  env.py
app/services/: camera.py  inference.py
configs/: base.yaml
docs/: Anomaly_Detection_Documentation.docx  Dissertation_Proposal.docx  MSc_Dissertation_Project_Documentation.md  User_Guide.docx
src/: api.py  auth.py  cli.py  config.py  db.py  pipeline.py
src/anomaly_inspection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: mvtec.py
src/models/: mean_diff.py
src/postproc/: bboxes.py  heatmap.py  mask.py
src/report/: writer.py
src/risk/: policy.py  rpm.py
src/uncertainty/: confidence.py  rules.py
src/vlm/: semantics.py
tests/: conftest.py  test_auth.py  test_images_limit.py  test_rbac.py  test_scan_flow.py
tools/: auto_commit.py  generate_docs.py  generate_proposal.py  run_all.ps1  run_autoupdate.ps1  start_all_services.ps1  start_all_services.sh
ui/: admin_ui.py  app_ui.py  auth_ui.py  components.py  user_ui.py
(+3 files in other folders)
