[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-inspection"
version = "0.1.0"
description = "Anomaly Detection / Visual Inspection conveyor-belt system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "nicegui>=2.0.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "opencv-python-headless>=4.10.0.84",
  "numpy>=1.26.0",
  "httpx>=0.27.0",
  "email-validator>=2.2.0",
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
